fix scroll jumping when setting first cursor

--- a/src/app/view/perspectives/table/shared/hidden-input/table-hidden-input.component.scss
+++ b/src/app/view/perspectives/table/shared/hidden-input/table-hidden-input.component.scss
@@ -2,6 +2,7 @@ input {
   border: none;
   caret-color: transparent;
   cursor: default;
-  width: 10px;
+  height: 0;
+  width: 0;
   color: white !important;
 }
